kline 持久化数据通知

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -34,7 +34,7 @@ bb.kline.bbKlineFromExpCoverEnable=0
 bb.kline.bbRepairTrade.enable=0
 
 #kline \u6301\u4E45\u5316\u6570\u636E\u901A\u77E5
-kline.persistentData.updateEventPattern=kline:bb:persistentData:updateEvent:%{asset}:%{symbol}:%{freq}
+kline.persistentData.updateEventPattern=persistentData:bb:updateEvent:%{asset}:%{symbol}:%{freq}
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
