--- a/ex-bb-kline/src/main/resources/application-pcprod2.properties
+++ b/ex-bb-kline/src/main/resources/application-pcprod2.properties
@@ -34,7 +34,7 @@ bb.kline.bbRepairTrade.enable=1
 
 
 #kline \u6301\u4E45\u5316\u6570\u636E\u901A\u77E5
-kline.persistentData.updateEventPattern=kline:pc:persistentData:updateEvent:%{asset}:%{symbol}:%{freq}
+kline.persistentData.updateEventPattern=persistentData:pc:updateEvent:%{asset}:%{symbol}:%{freq}
 
 # pubsub ongoing trade
 bb.trade.pattern=pc:trade:%{asset}:%{symbol}
