k线持久化数据保存

--- a/ex-pc-match-trade/src/main/resources/application.properties
+++ b/ex-pc-match-trade/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #eureka
 feign.hystrix.enabled=false
 
+pc.kline.data=candle:pc:%{asset}:%{symbol}:%{freq}
+kline.persistentData.updateEventPattern=persistentData:pc:updateEvent:%{asset}:%{symbol}:%{freq}
+kline.persistent.batchSize=1440
 
 #mq
 hp.rocketmq.enabled=true
