--- a/ex-bb-match-trade/src/main/resources/application-bbdev3.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bbdev3.properties
@@ -7,7 +7,9 @@ spring.datasource.hikari.primary.password=root1234
 app.log.home=/data/hupa/logs/bb-trade/group3
 
 #kline \u6301\u4E45\u5316\u6570\u636E\u901A\u77E5
-kline.persistentData.updateEventPattern=kline:bb:persistentData:updateEvent:%{asset}:%{symbol}:%{freq}
+kline.persistentData.updateEventPattern=persistentData:bb:updateEvent:%{asset}:%{symbol}:%{freq}
+
+bb.kline.data=candle:bb:%{asset}:%{symbol}:%{freq}
 
 kline.persistent.batchSize=1440
 bb.kline.supportFrequenceString=1,5,15,30,60,360,1440
