--- a/ex-fund-account/src/main/resources/application-dev.properties
+++ b/ex-fund-account/src/main/resources/application-dev.properties
@@ -21,10 +21,10 @@ spring.redis.password=456
 
 
 #c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
-cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
-cnyPlpay.server.shopNo=356
+cnyPlpay.server.host=http://115.144.238.29:88/client/tracnce
+cnyPlpay.server.shopNo=360
 cnyPlpay.server.signType=MD5
-cnyPlpay.server.md5Key=TQSsHaM68c
+cnyPlpay.server.md5Key=ZvEIZzWeIG
 cnyPlpay.server.customerId=test1234
 cnyPlpay.server.c2c_fee_ratio=0.025
 
