--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -22,12 +22,12 @@ bys.server.host=http://47.105.65.115:7080/api/v1
 bys.client.secret=cFH]0bNrt7gJI+1n5D9B
 
 
-#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
-cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
-cnyPlpay.server.shopNo=334
+#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+cnyPlpay.server.host=http://115.144.238.29:88/client/tracnce
+cnyPlpay.server.shopNo=362
 cnyPlpay.server.signType=MD5
-cnyPlpay.server.md5Key=HIETqcV152
+cnyPlpay.server.md5Key=U8NHWspeND
 cnyPlpay.server.customerId=gte666
 cnyPlpay.server.c2c_fee_ratio=0.025
-
+#
 plpay.server.c2c_fee_ratio=0.025
