--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -16,6 +16,7 @@ hp.rocketmq.instanceName=${app.server.id}
 hp.rocketmq.default_consumer.group=ex-bb-base
 hp.rocketmq.default_producer.group=ex-bb-base
 mq.orderly.consumer.enable=true
+mq.orderly.consumer.select=2
 mq.consume.maxThreads=${server.maxThreads}
 
 #Hikari
