--- a/ex-common/pom.xml
+++ b/ex-common/pom.xml
@@ -18,6 +18,16 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shardingsphere</groupId>
+			<artifactId>sharding-jdbc-core</artifactId>
+			<version>4.0.0-RC3</version>
+		</dependency>
         <dependency>
 			<groupId>com.gitee.hupadev</groupId>
 			<artifactId>hupa-base</artifactId>
