修改活动表1

--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -19,6 +19,10 @@ exp.redis.host=192.168.0.68
 exp.redis.port=16375
 exp.redis.password=456
 
+base.redis.host=127.0.0.1
+base.redis.port=6379
+base.redis.password=
+
 #job
 job.type=schedule
 xxl.job.executor.appname=${spring.application.name}-local
