修改活动表3-修改委托

--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -19,9 +19,9 @@ exp.redis.host=192.168.0.68
 exp.redis.port=16375
 exp.redis.password=456
 
-base.redis.host=127.0.0.1
+base.redis.host=192.168.0.36
 base.redis.port=6379
-base.redis.password=
+base.redis.password=123
 
 #job
 job.type=schedule
