通过第三方数据修复本平台k线数据

--- a/ex-bb-extend/src/main/resources/application-bai.properties
+++ b/ex-bb-extend/src/main/resources/application-bai.properties
@@ -6,52 +6,54 @@ swagger.host=localhost:${app.server.port}
 hp.rocketmq.namespace=exp_v3-local
 
 
-#metadata.redis.hostName=192.168.0.68
-#metadata.redis.password=456
-#metadata.redis.port=16375
-#metadata.redis.database=0
-#metadata.redis.timeout=6000
-#metadata.redis.minIdle=5
-#metadata.redis.maxIdle=10
-#metadata.redis.maxTotal=25
-#metadata.redis.maxWaitMillis=2000
-#metadata.redis.testOnBorrow=true
-#metadata.redis.testOnReturn=true
-#metadata.redis.testWhileIdle=true
-#
-
 #Hikari
+spring.datasource.hikari.primary.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
-#kline.redis.host=127.0.0.1
-#kline.redis.port=6379
-#kline.redis.password=
+
+#Hikari \u6570\u636E\u6E902
+spring.datasource.hikari.slave.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.slave.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.slave.jdbcUrl=jdbc:mysql://thrid-data.icocrop.io:1234/ted?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.slave.username=thdata
+spring.datasource.hikari.slave.password=X0yP08en976015VhUCG
 
 #redis
-#spring.cache.type=redis
-#meta.redis.host=${spring.redis.host}
-#meta.redis.port=${spring.redis.port}
-#meta.redis.password=${spring.redis.password}
+spring.cache.type=redis
+spring.redis.host=192.168.0.68
+spring.redis.port=16375
+spring.redis.password=456
 
-#spring.redis.host=192.168.0.68
-#spring.redis.port=16375
-#spring.redis.password=456
+meta.redis.host=${spring.redis.host}
+meta.redis.port=${spring.redis.port}
+meta.redis.password=${spring.redis.password}
 
 # Redis \u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A 0\uFF09
-#spring.redis.database=5
-## Redis \u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
-## Redis \u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
-##spring.redis.password=456
-##\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-#spring.redis.jedis.pool.max-active=8
-## \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-#spring.redis.jedis.pool.max-wait=-1
-## \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
-#spring.redis.jedis.pool.max-idle=8
-## \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
-#spring.redis.jedis.pool.min-idle=0
-## \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
-#spring.redis.timeout=2000
+spring.redis.database=0
+#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-active=32
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-wait=6000
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.max-idle=32
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.min-idle=0
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+spring.redis.timeout=6000
+
+
+redis.servers=${spring.redis.host}:${spring.redis.port}
+redis.poolConfig.maxTotal=1024
+redis.poolConfig.maxIdle=256
+redis.poolConfig.maxWaitMillis=1000
+redis.poolConfig.testOnBorrow=true
+redis.poolConfig.testOnReturn=true
+
+spring.redis.lettuce.pool.max-active=1000
+spring.redis.lettuce.pool.max-wait=5000
+spring.redis.lettuce.pool.max-idle=256
+spring.redis.lettuce.pool.min-idle=2
+
