--- a/ex-bb-extend/src/main/resources/application-dev.properties
+++ b/ex-bb-extend/src/main/resources/application-dev.properties
@@ -1,69 +1,60 @@
+
+
+spring.datasource.hikari.primary.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
+#Hikari \u6570\u636E\u6E902
+spring.datasource.hikari.slave.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.slave.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.slave.jdbcUrl=jdbc:mysql://thrid-data.icocrop.io:1234/ted?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.slave.username=thdata
+spring.datasource.hikari.slave.password=X0yP08en976015VhUCG
+
 #swagger
 swagger.host=
 
-#bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
-#bb.kline.triggerBatchSize=20
-#bb.kline.bbGroupIds=1
-
-#kline.redis.host=192.168.0.68
-#kline.redis.port=16375
-#kline.redis.password=456
-#
-#bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
-#bb.trade.pattern=bb:trade:%{asset}:%{symbol}
-#bb.kline.update=bb:kline:update:%{asset}:%{symbol}:%{freq}
-#bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
-#
-#bbextend.redis.hostName=192.168.0.190
-#bbextend.redis.password=456
-#bbextend.redis.port=16379
-#bbextend.redis.database=2
-#bbextend.redis.timeout=6000
-#bbextend.redis.minIdle=2
-#bbextend.redis.maxIdle=4
-#bbextend.redis.maxTotal=10
-#bbextend.redis.maxWaitMillis=2000
-#bbextend.redis.testOnBorrow=true
-#bbextend.redis.testOnReturn=true
-#bbextend.redis.testWhileIdle=true
-#
-#bbkline.ongoing.redis.hostName=192.168.0.68
-#bbkline.ongoing.redis.password=456
-#bbkline.ongoing.redis.port=16375
-#bbkline.ongoing.redis.database=5
-#bbkline.ongoing.redis.timeout=6000
-#bbkline.ongoing.redis.minIdle=2
-#bbkline.ongoing.redis.maxIdle=4
-#bbkline.ongoing.redis.maxTotal=10
-#bbkline.ongoing.redis.maxWaitMillis=2000
-#bbkline.ongoing.redis.testOnBorrow=true
-#bbkline.ongoing.redis.testOnReturn=true
-#bbkline.ongoing.redis.testWhileIdle=true
-#
-#metadata.redis.hostName=192.168.0.68
-#metadata.redis.password=456
-#metadata.redis.port=16375
-#metadata.redis.database=0
-#metadata.redis.timeout=6000
-#metadata.redis.minIdle=2
-#metadata.redis.maxIdle=4
-#metadata.redis.maxTotal=10
-#metadata.redis.maxWaitMillis=2000
-#metadata.redis.testOnBorrow=true
-#metadata.redis.testOnReturn=true
-#metadata.redis.testWhileIdle=true
 
 #mq
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.createConsumer=false
 
 #redis
-#spring.cache.type=redis
-#spring.redis.host=192.168.0.68
-#spring.redis.port=16375
-#spring.redis.password=456
+spring.cache.type=redis
+spring.redis.host=192.168.0.68
+spring.redis.port=16375
+spring.redis.password=456
+
+meta.redis.host=${spring.redis.host}
+meta.redis.port=${spring.redis.port}
+meta.redis.password=${spring.redis.password}
+
+# Redis \u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A 0\uFF09
+spring.redis.database=0
+#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-active=32
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-wait=6000
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.max-idle=32
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.min-idle=0
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+spring.redis.timeout=6000
+
+
+redis.servers=${spring.redis.host}:${spring.redis.port}
+redis.poolConfig.maxTotal=1024
+redis.poolConfig.maxIdle=256
+redis.poolConfig.maxWaitMillis=1000
+redis.poolConfig.testOnBorrow=true
+redis.poolConfig.testOnReturn=true
+
+spring.redis.lettuce.pool.max-active=1000
+spring.redis.lettuce.pool.max-wait=5000
+spring.redis.lettuce.pool.max-idle=256
+spring.redis.lettuce.pool.min-idle=2
+
+
