--- a/ex-bb-extend/src/main/resources/application-prod.properties
+++ b/ex-bb-extend/src/main/resources/application-prod.properties
@@ -2,10 +2,18 @@
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
+spring.datasource.hikari.primary.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=bbext
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
+
+#Hikari \u6570\u636E\u6E902
+spring.datasource.hikari.slave.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.slave.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.slave.jdbcUrl=jdbc:mysql://thrid-data.icocrop.io:1234/ted?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.slave.username=thdata
+spring.datasource.hikari.slave.password=X0yP08en976015VhUCG
 
 #mq
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
@@ -17,3 +25,33 @@ spring.cache.type=redis
 spring.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 spring.redis.port=6379
 spring.redis.password=
+
+meta.redis.host=${spring.redis.host}
+meta.redis.port=${spring.redis.port}
+meta.redis.password=${spring.redis.password}
+
+# Redis \u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A 0\uFF09
+spring.redis.database=0
+#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-active=32
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-wait=6000
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.max-idle=32
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.min-idle=0
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+spring.redis.timeout=6000
+
+
+redis.servers=${spring.redis.host}:${spring.redis.port}
+redis.poolConfig.maxTotal=1024
+redis.poolConfig.maxIdle=256
+redis.poolConfig.maxWaitMillis=1000
+redis.poolConfig.testOnBorrow=true
+redis.poolConfig.testOnReturn=true
+
+spring.redis.lettuce.pool.max-active=1000
+spring.redis.lettuce.pool.max-wait=5000
+spring.redis.lettuce.pool.max-idle=256
+spring.redis.lettuce.pool.min-idle=2
