订单历史，及其他优化

--- a/ex-bb-base/pom.xml
+++ b/ex-bb-base/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>xxl-job-core</artifactId>
             <version>2.1.2</version>
         </dependency>
+        
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 		
 	</dependencies>
 	
