--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -96,3 +96,5 @@ xxl.job.executor.port=2${app.server.port}
 xxl.job.accessToken=
 xxl.job.executor.logpath=/data/hupa/logs/xxl-job/bb
 xxl.job.executor.logretentiondays=30
+
+synch.collecto=true
