--- a/ex-fund-account/src/main/resources/application-local.properties
+++ b/ex-fund-account/src/main/resources/application-local.properties
@@ -9,7 +9,7 @@ meta.redis.host=192.168.0.68
 meta.redis.port=16375
 meta.redis.password=456
 
-#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
 cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
 cnyPlpay.server.shopNo=334
 cnyPlpay.server.signType=MD5
@@ -18,3 +18,9 @@ cnyPlpay.server.customerId=gte666
 cnyPlpay.server.c2c_fee_ratio=0.025
 
 plpay.server.c2c_fee_ratio=0.025
+
+
+
+#test
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
