--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -19,6 +19,10 @@ exp.redis.host=192.168.0.68
 exp.redis.port=16375
 exp.redis.password=456
 
+base.redis.host=192.168.0.36
+base.redis.port=6379
+base.redis.password=123
+
 #job
 job.type=schedule
 xxl.job.executor.appname=${spring.application.name}-local
@@ -26,3 +30,8 @@ xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
 
 #tomcat
 server.maxThreads=64
+
+#test
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_bb3?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.password=456123
