--- a/ex-fund-account/src/main/resources/application-dev.properties
+++ b/ex-fund-account/src/main/resources/application-dev.properties
@@ -20,7 +20,7 @@ spring.redis.port=16375
 spring.redis.password=456
 
 
-#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
 cnyPlpay.server.host=http://115.144.238.29:88/client/tracnce
 cnyPlpay.server.shopNo=360
 cnyPlpay.server.signType=MD5
