DB分库 接口修改

--- a/ex-bb-extend/src/main/resources/application.properties
+++ b/ex-bb-extend/src/main/resources/application.properties
@@ -40,7 +40,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
 mybatis.configuration.cache-enabled=true
 #\u5F00\u542F\u9A7C\u5CF0\u547D\u540D
 mybatis.configuration.map-underscore-to-camel-case=true 
-
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 page.helper.helper-dialect=mysql
 page.helper.reasonable=true
