--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -34,4 +34,5 @@ server.maxThreads=64
 #test
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_bb3?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.password=456123
+spring.datasource.hikari.primary.username=expv3
+spring.datasource.hikari.primary.password=root1234
