pc事务隔离级别

--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -30,6 +30,8 @@ spring.datasource.hikari.primary.max-lifetime=1800000
 spring.datasource.hikari.primary.connection-timeout=30000
 spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
+spring.datasource.hikari.primary.transactionIsolation=2
+spring.datasource.hikari.primary.default-transaction-isolation=2
 
 #id
 id.generator.dataCenterId=0
