--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -13,6 +13,7 @@ hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=2
 hp.rocketmq.default_consumer.group=ex-pc-base
 hp.rocketmq.default_producer.group=ex-pc-base
+mq.orderly.consumer.select=2
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
