--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
 		<module>ex-bb-kline</module>
         <module>ex-bb-match-trade</module>
         <module>ex-pc-match-trade</module>
+        <module>query-kline-data-by-third-data</module>
+        <module>query-third-kline-data-def</module>
         <!--<module>ex_grab_bb_3rdData</module>-->
         <!--<module>ex_grab_pc_3rdData</module>-->
     </modules>
