--- a/ex-pc-extend/src/main/resources/application.properties
+++ b/ex-pc-extend/src/main/resources/application.properties
@@ -15,8 +15,8 @@ hp.rocketmq.default_producer.group=ex-pc-extend
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=test
-spring.datasource.hikari.primary.password=123456
+spring.datasource.hikari.primary.username=expv3
+spring.datasource.hikari.primary.password=root1234
 
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
