expv3-fund 改 expv3_fund

--- a/ex-fund-account/src/main/resources/application-dev.properties
+++ b/ex-fund-account/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
 #Hikari-second
-spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.second.username=root
 spring.datasource.hikari.second.password=root1234
 
@@ -20,7 +20,7 @@ spring.redis.port=16375
 spring.redis.password=456
 
 
-#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
 cnyPlpay.server.host=http://115.144.238.29:88/client/tracnce
 cnyPlpay.server.shopNo=360
 cnyPlpay.server.signType=MD5
