--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 
-app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
 
 #db
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_shard?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
 
