--- a/ex-fund-account/src/main/resources/application-dev.properties
+++ b/ex-fund-account/src/main/resources/application-dev.properties
@@ -1,11 +1,6 @@
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_shard?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
-
-#Hikari-second
-spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.second.username=root
-spring.datasource.hikari.second.password=root1234
 
 #swagger
 swagger.host=192.168.0.84:${app.server.port}
