--- a/ex-pc-base/src/main/resources/application-dev.properties
+++ b/ex-pc-base/src/main/resources/application-dev.properties
@@ -6,15 +6,15 @@ spring.datasource.hikari.primary.password=root1234
 swagger.host=
 
 #mq
-hp.rocketmq.namespace=exp_v3
+hp.rocketmq.namespace=fen
 
 #redis
 exp.redis.host=192.168.0.68
-exp.redis.port=16375
+exp.redis.port=16372
 exp.redis.password=456
 
 base.redis.host=192.168.0.68
-base.redis.port=16375
+base.redis.port=16372
 base.redis.password=456
 
 ##job
