--- a/ex-pc-extend/src/main/resources/application-dev.properties
+++ b/ex-pc-extend/src/main/resources/application-dev.properties
@@ -6,11 +6,11 @@ spring.datasource.hikari.primary.password=root1234
 swagger.host=
 
 #mq
-hp.rocketmq.namespace=exp_v3
+hp.rocketmq.namespace=fen
 hp.rocketmq.createConsumer=false
 
 #redis
 spring.cache.type=redis
 spring.redis.host=192.168.0.68
-spring.redis.port=16375
+spring.redis.port=16372
 spring.redis.password=456
