--- a/ex-bb-extend/src/main/resources/application-dev.properties
+++ b/ex-bb-extend/src/main/resources/application-dev.properties
@@ -18,13 +18,13 @@ swagger.host=
 
 
 #mq
-hp.rocketmq.namespace=exp_v3
+hp.rocketmq.namespace=fen
 hp.rocketmq.createConsumer=false
 
 #redis
 spring.cache.type=redis
 spring.redis.host=192.168.0.68
-spring.redis.port=16375
+spring.redis.port=16372
 spring.redis.password=456
 
 meta.redis.host=${spring.redis.host}
