--- a/ex-bb-extend/src/main/resources/application-dev.properties
+++ b/ex-bb-extend/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
 
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.97:8761/eureka/
+
 
 spring.datasource.hikari.primary.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
