--- a/ex-pc-extend/src/main/resources/application-dev.properties
+++ b/ex-pc-extend/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
+
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.97:8761/eureka/
+
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_shard?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
