--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -21,7 +21,7 @@ exp.redis.password=456
 
 base.redis.host=192.168.0.36
 base.redis.port=6379
-base.redis.password=123
+base.redis.password=
 
 #job
 job.type=schedule
@@ -31,8 +31,11 @@ xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
 #tomcat
 server.maxThreads=64
 
-#test
-app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=expv3
-spring.datasource.hikari.primary.password=root1234
+#h2
+spring.datasource.hikari.primary.driver-class-name=org.h2.Driver
+spring.datasource.hikari.primary.jdbcUrl=jdbc:h2:mem:test_db;MODE=MYSQL
+spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.password=123456
+spring.h2.console.enabled=true
+
+
