--- a/ex-pc-match-trade-def/pom.xml
+++ b/ex-pc-match-trade-def/pom.xml
@@ -2,11 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    <!--<parent>-->
+        <!--<artifactId>ex-parent</artifactId>-->
+        <!--<groupId>com.hp.sh.expv3</groupId>-->
+        <!--<version>3.0.0-SNAPSHOT</version>-->
+    <!--</parent>-->
     <modelVersion>4.0.0</modelVersion>
 
+    <!--<artifactId>ex-pc-match-trade-def</artifactId>-->
     <groupId>com.hp.sh.expv3</groupId>
-    <artifactId>ex-bb-match-trade-def</artifactId>
+    <artifactId>ex-pc-match-trade-def</artifactId>
     <packaging>jar</packaging>
     <version>3.0.0-SNAPSHOT</version>
 
@@ -91,5 +96,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
