--- a/ex-pc-match-trade/pom.xml
+++ b/ex-pc-match-trade/pom.xml
@@ -38,6 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hp.sh.expv3</groupId>
+            <artifactId>ex-pc-match-trade-def</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
