--- a/ex-pc-extend/pom.xml
+++ b/ex-pc-extend/pom.xml
@@ -26,7 +26,13 @@
 			<artifactId>ex-pc-extend-def</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
+        <dependency>
+            <groupId>com.hp.sh.expv3</groupId>
+            <artifactId>ex-pc-match-trade-def</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+        </dependency>
+
 		<dependency>
 			<groupId>com.hp.sh.expv3</groupId>
 			<artifactId>ex-pc-base-jar</artifactId>
