--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -59,7 +59,7 @@ spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
 spring.redis.pool.min-idle=2
-spring.redis.timeout=2000ms
+spring.redis.timeout=0
 spring.redis.database=1
 spring.redis.keyPrefix=
 
