--- a/ex-fund-account/src/main/resources/application-local.properties
+++ b/ex-fund-account/src/main/resources/application-local.properties
@@ -24,3 +24,5 @@ plpay.server.c2c_fee_ratio=0.025
 #test
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.97:8761/eureka/
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=expv3
+spring.datasource.hikari.primary.password=root1234
