bug修复（sql中去掉frozen_asset字段）

--- a/ex-pc-extend/src/main/resources/application-bai.properties
+++ b/ex-pc-extend/src/main/resources/application-bai.properties
@@ -7,8 +7,8 @@ hp.rocketmq.namespace=exp_v3-local
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.120:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=expv3
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_shard?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
 spring.redis.host=192.168.0.68
