--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -11,6 +11,7 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
 #db
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_pc3?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
 
