bbext lhj config

--- a/ex-bb-extend/src/main/resources/application-prod.properties
+++ b/ex-bb-extend/src/main/resources/application-prod.properties
@@ -1,22 +1,22 @@
 
-app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.34.91:8761/eureka/
 
 #db
 spring.datasource.hikari.primary.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=bbext
-spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://lianhj.cqfjt85or22f.ap-northeast-1.rds.amazonaws.com:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.password=dSveDaW2w3qiqgUBTSxM
 
 
 #mq
-hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
+hp.rocketmq.namesrvAddr=172.31.34.4:9876;172.31.40.112:9876
 hp.rocketmq.namespace=exp
 hp.rocketmq.instanceName=1
 
 #redis
 spring.cache.type=redis
-spring.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
+spring.redis.host=prod-lianhj.2ccqa5.ng.0001.apne1.cache.amazonaws.com
 spring.redis.port=6379
 spring.redis.password=
 
@@ -24,17 +24,17 @@ meta.redis.host=${spring.redis.host}
 meta.redis.port=${spring.redis.port}
 meta.redis.password=${spring.redis.password}
 
-# Redis \u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A 0\uFF09
+# Redis \u6570\u636e\u5e93\u7d22\u5f15\uff08\u9ed8\u8ba4\u4e3a 0\uff09
 spring.redis.database=0
-#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+#\u8fde\u63a5\u6c60\u6700\u5927\u8fde\u63a5\u6570\uff08\u4f7f\u7528\u8d1f\u503c\u8868\u793a\u6ca1\u6709\u9650\u5236\uff09
 spring.redis.jedis.pool.max-active=32
-# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+# \u8fde\u63a5\u6c60\u6700\u5927\u963b\u585e\u7b49\u5f85\u65f6\u95f4\uff08\u4f7f\u7528\u8d1f\u503c\u8868\u793a\u6ca1\u6709\u9650\u5236\uff09
 spring.redis.jedis.pool.max-wait=6000
-# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+# \u8fde\u63a5\u6c60\u4e2d\u7684\u6700\u5927\u7a7a\u95f2\u8fde\u63a5
 spring.redis.jedis.pool.max-idle=32
-# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+# \u8fde\u63a5\u6c60\u4e2d\u7684\u6700\u5c0f\u7a7a\u95f2\u8fde\u63a5
 spring.redis.jedis.pool.min-idle=0
-# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+# \u8fde\u63a5\u8d85\u65f6\u65f6\u95f4\uff08\u6beb\u79d2\uff09
 spring.redis.timeout=6000
 
 
