--- a/ex-pc-base/src/main/resources/application-prod.properties
+++ b/ex-pc-base/src/main/resources/application-prod.properties
@@ -1,24 +1,24 @@
 
-app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.34.91:8761/eureka/
 
 #db
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=pc
-spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://lianhj.cqfjt85or22f.ap-northeast-1.rds.amazonaws.com:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.password=dSveDaW2w3qiqgUBTSxM
 
 #mq
-hp.rocketmq.namesrvAddr=172.31.9.220:9876;172.31.6.105:9876
+hp.rocketmq.namesrvAddr=172.31.34.4:9876;172.31.40.112:9876
 hp.rocketmq.namespace=exp
 hp.rocketmq.instanceName=1
 
 #redis
-exp.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
+exp.redis.host=prod-lianhj.2ccqa5.ng.0001.apne1.cache.amazonaws.com
 exp.redis.port=6379
 exp.redis.password=
 
-base.redis.host=172.31.30.246
-base.redis.port=6378
-base.redis.password=ZCJkKkXxXI8
+base.redis.host=prod-lianhj.2ccqa5.ng.0001.apne1.cache.amazonaws.com
+base.redis.port=6379
+base.redis.password=
 
 ##job
 job.type=schedule
