工具类优化

--- a/ex-bb-extend/src/main/resources/application-bai.properties
+++ b/ex-bb-extend/src/main/resources/application-bai.properties
@@ -9,8 +9,8 @@ hp.rocketmq.namespace=exp_v3-local
 #Hikari
 spring.datasource.hikari.primary.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.120:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=expv3
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_shard?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
 
