修改数据库用户

--- a/ex-bb-base/src/main/resources/application-prod.properties
+++ b/ex-bb-base/src/main/resources/application-prod.properties
@@ -3,8 +3,8 @@ app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.34.91:8761/eureka/
 
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://lianhj.cqfjt85or22f.ap-northeast-1.rds.amazonaws.com:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=root
-spring.datasource.hikari.primary.password=dSveDaW2w3qiqgUBTSxM
+spring.datasource.hikari.primary.username=bb
+spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 #mq
 hp.rocketmq.namesrvAddr=172.31.34.4:9876;172.31.40.112:9876
