--- a/ex-bb-extend/src/main/resources/application-prod.properties
+++ b/ex-bb-extend/src/main/resources/application-prod.properties
@@ -5,8 +5,8 @@ app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.34.91:8761/eureka/
 spring.datasource.hikari.primary.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://lianhj.cqfjt85or22f.ap-northeast-1.rds.amazonaws.com:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=root
-spring.datasource.hikari.primary.password=dSveDaW2w3qiqgUBTSxM
+spring.datasource.hikari.primary.username=bbext
+spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 
 #mq
