--- a/ex-pc-extend/src/main/resources/application-local.properties
+++ b/ex-pc-extend/src/main/resources/application-local.properties
@@ -18,6 +18,6 @@ spring.datasource.hikari.primary.password=root1234
 
 
 #redis
-meta.redis.host=192.168.0.68
-meta.redis.port=16375
-meta.redis.password=456
+exp.redis.host=192.168.0.68
+exp.redis.port=16375
+exp.redis.password=456
