--- a/ex-pc-extend/src/main/resources/application.properties
+++ b/ex-pc-extend/src/main/resources/application.properties
@@ -31,14 +31,18 @@ spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #redis
-meta.redis.host=${spring.redis.host}
-meta.redis.port=${spring.redis.port}
-meta.redis.password=${spring.redis.password}
+exp.redis.host=localhost
+exp.redis.port=6379
+exp.redis.password=
+
+base.redis.host=${exp.redis.host}
+base.redis.port=${exp.redis.port}
+base.redis.password=${exp.redis.password}
 
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
+spring.redis.host=${exp.redis.host}
+spring.redis.port=${exp.redis.port}
+spring.redis.password=${exp.redis.password}
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
