--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -18,8 +18,8 @@ spring.redis.password=
 
 #bys
 bys.server.host=http://47.91.248.191:7080/api/v1
-bys.client.merchantId=1
-bys.client.secret=6SKW49tZX12uyvNMoG
+bys.client.merchantId=5
+bys.client.secret=8TMXc6|0LRGok1ajxA4^
 
 
 #c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
