--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
 		<dependency>
 			<groupId>org.mybatis.generator</groupId>
 			<artifactId>mybatis-generator-core</artifactId>
+			<scope>test</scope>
 			<version>1.3.7</version>
 		</dependency>
 		
