--- a/ex-fund-account/src/main/resources/application-bai.properties
+++ b/ex-fund-account/src/main/resources/application-bai.properties
@@ -50,3 +50,13 @@ plpay.server.c2c_fee_ratio=0.025
 #cnyPlpay.server.c2c_fee_ratio=0.025
 #
 #plpay.server.c2c_fee_ratio=0.025
+
+
+usdtPlpay.server.host=https://www.91pays.com/api/otc/submit
+usdtPlpay.server.pid=10005
+usdtPlpay.server.sign_type=MD5
+usdtPlpay.server.md5Key=6BXv3V0440p5b00XzV7H6PxhcWB7X2h0
+usdtPlpay.server.name=buyUsdt
+#usdtPlpay.server.customerId=test1234
+#usdtPlpay.server.c2c_fee_ratio=0.025
+
