--- a/ex-fund-account/src/main/resources/application-dev.properties
+++ b/ex-fund-account/src/main/resources/application-dev.properties
@@ -14,7 +14,7 @@ spring.redis.port=16372
 spring.redis.password=456
 
 
-#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
+#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
 cnyPlpay.server.host=http://115.144.238.29:88/client/tracnce
 cnyPlpay.server.shopNo=360
 cnyPlpay.server.signType=MD5
@@ -30,3 +30,10 @@ cnyPlpay.server.c2c_fee_ratio=0.025
 #cnyPlpay.server.c2c_fee_ratio=0.025
 
 plpay.server.c2c_fee_ratio=0.025
+
+
+usdtPlpay.server.host=https://www.91pays.com/api/otc/submit
+usdtPlpay.server.pid=10005
+usdtPlpay.server.sign_type=MD5
+usdtPlpay.server.md5Key=6BXv3V0440p5b00XzV7H6PxhcWB7X2h0
+usdtPlpay.server.name=buyUsdt
