--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ bys.client.merchantId=5
 bys.client.secret=8TMXc6|0LRGok1ajxA4^
 
 
-#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
+#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
 cnyPlpay.server.host=http://115.144.238.29:88/client/tracnce
 cnyPlpay.server.shopNo=362
 cnyPlpay.server.signType=MD5
@@ -31,3 +31,10 @@ cnyPlpay.server.customerId=gte666
 cnyPlpay.server.c2c_fee_ratio=0.025
 #
 plpay.server.c2c_fee_ratio=0.025
+
+
+usdtPlpay.server.host=https://www.91pays.com/api/otc/submit
+usdtPlpay.server.pid=10005
+usdtPlpay.server.sign_type=MD5
+usdtPlpay.server.md5Key=6BXv3V0440p5b00XzV7H6PxhcWB7X2h0
+usdtPlpay.server.name=buyUsdt
