--- a/ex-pj-admin/src/main/resources/application-dev.properties
+++ b/ex-pj-admin/src/main/resources/application-dev.properties
@@ -1,11 +1,11 @@
-app.host=http://192.168.0.84:${app.server.port}
+app.host=https://v4-sche.icocrop.io
 
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pj?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
-##exp
-exp.redis.host=47.89.9.210
-exp.redis.port=26379
-exp.redis.password=aXYYerYHV0oQ8371e5NV
+#redis
+exp.redis.host=192.168.0.68 
+exp.redis.port=16375
+exp.redis.password=456
