--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <module>query-third-kline-data-def</module>
         <module>ex-bb-match-trade-def</module>
         <module>ex-pc-match-trade-def</module>
-		<module>ex-pj-admin</module>
+		<!--<module>ex-pj-admin</module>-->
 		
         <!--<module>ex_grab_bb_3rdData</module>-->
         <!--<module>ex_grab_pc_3rdData</module>-->
