项目方后台

--- a/ex-pj-admin/src/main/resources/application-local.properties
+++ b/ex-pj-admin/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-app.host=https://v4-sche.icocrop.io
+app.host=http://localhost:${app.server.port}
 
-plate.strategy.start=true
+plate.strategy.start=false
 
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pj?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
