--- a/ex-pj-admin/src/main/resources/application-prod.properties
+++ b/ex-pj-admin/src/main/resources/application-prod.properties
@@ -1,5 +1,7 @@
 app.host=https://sche.lianhj.com
 
+plate.strategy.start=true
+
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://lianhj.cqfjt85or22f.ap-northeast-1.rds.amazonaws.com:3306/expv3_pj?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=pj
