--- a/ex-pj-admin/src/main/resources/application-dev.properties
+++ b/ex-pj-admin/src/main/resources/application-dev.properties
@@ -11,3 +11,21 @@ spring.datasource.hikari.primary.password=root1234
 exp.redis.host=192.168.0.68 
 exp.redis.port=16375
 exp.redis.password=456
+
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.97:8761/eureka/
+eureka.client.serviceUrl.defaultZone=${app.registry.eureka.url}
+eureka.client.healthcheck.enabled=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=5
+eureka.instance.prefer-ip-address=true
+ribbon.ConnectTimeout=5000
+ribbon.ReadTimeout=10000
+ribbon.MaxAutoRetries=0
+ribbon.MaxAutoRetriesNextServer=1
+ribbon.eureka.enable: true
+
+user.registerCount.api.ip=192.168.0.38:8000
+user.registerCount.apiPassword=exp2000
+user.registerCount.apiAddr=http://${user.registerCount.api.ip}/v1/http/user/query_user_count?pass_word=${user.registerCount.apiPassword}
