--- a/ex-pj-admin/src/main/resources/application.yml
+++ b/ex-pj-admin/src/main/resources/application.yml
@@ -35,8 +35,8 @@ eureka:
     healthcheck:
       enabled: true
       
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: true
+    fetchRegistry: true
   instance:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 5
