--- a/ex-pj-admin/pom.xml
+++ b/ex-pj-admin/pom.xml
@@ -38,6 +38,12 @@
 			<version>9.2.2</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>com.hp.sh.expv3</groupId>
+			<artifactId>ex-bb-extend-def</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 	
 
